# wearypossum4770.io

./: .behaverc  .env  .gitignore  .htaccess  404.html  Pipfile  README.md  index.html  manage.py  package.json  pyproject.toml
.config/: .prettierrc.toml
accounts/: forms.py  models.py  views.py
accounts/misc/: 2020-08-09-exported_transactions.json  RecurringTransaction.json  chart_of_accounts.json  confirmation.json  currency.json  info.py  orders.json  products.json  records.json  sample.html  songs.xml  tax.json  time_value_of_money.py  transactions.py
accounts/models/: amortization.py  annuity.py  asset.py  interest.py  transaction.py
core/: formulas.go  formulas.py  formulas.rs  json_controller.py  validation_messages.py
core/npm/: tsconfig.tsbuildinfo
docs/: index.html
docs/pages/: about_contact.html  projects.html
misc/: Cargo.toml  amortization.py  behave_fixtures.py  dunder_slots.py  git-sync  git_sync.py  init_data.json  models.py  riosalado_accounting.json  run.sh
misc/eventtypes/: apps.py
misc/ideas/: css_tabs.html
misc/temp_test_holder/: test_annuity.py  test_interest.py
misc/temp_test_holder/bdd/: cucumber.rs  environment.py
misc/temp_test_holder/bdd/features/support/: steps.js  world.js
misc/temp_test_holder/python_skip/: formulas_test.py  income_statement_test.py
pages/: about_contact.html  blog.html  projects.html
src/: App.js  FASB.js  functions.js  index.js  package.json  serviceWorker.js  stylesheet.css  test_web_script.test.js
standalone/: .secrets.toml
statements/: income_statement.py  tests.py
stevebooks/: asgi.py  settings.py  urls.py  wsgi.py
tests/: stories  test_stevebooks.py
(+38 files in other folders)
