# pyproject.toml
[tool.pytest.ini_options]
	minversion = "6.0"
	addopts = "-ra -q -v --doctest-modules"
	testpaths = [
		"tests",
		]
[tool.isort]
	line_length = 99
	multi_line_output = 3
	include_trailing_comma = true

[tool.poetry]
	name = "stevebooks"
	version = "0.1.0"
	description = "Python library for calculating amortizations and generating amortization schedules"

	readme = "README.md"
	authors = ["wearypossum4770 <wearypossum4770@yahoo.com>"]
	inspired-by = ["Ronie Martinez <ronmarti18@gmail.com>"]
	keywords = [
		"amortization"
		]
	classifiers = [
		"Development Status :: 5 - Production/Stable",
		"Topic :: Office/Business :: Financial :: Accounting",
		"Topic :: Scientific/Engineering :: Mathematics",
		"Topic :: Software Development :: Libraries :: Python Modules",
		"Programming Language :: Python :: 3",
		"Programming Language :: Python :: 3.7",
		"Programming Language :: Python :: 3.8",
		]
[tool.poetry.dependencies]
	python = "^3.7"
[tool.poetry.scripts]
[tool.poetry.dev-dependencies]
	pytest = "^5.2"

[build-system]
	requires = ["poetry>=0.12"]
	build-backend = "poetry.masonry.api"
